argocd-manifests/apps/golang-app/overlays/develop/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: golang-app-ingress
  annotations:
    cert-manager.io/cluster-issuer: "local-ca-issuer"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "dev-golang-app.argocd-learn.azhe.my.id"
      secretName: local-tls
  rules:
    - host: dev-golang-app.argocd-learn.azhe.my.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: develop-golang-app
                port:
                  number: 80
